<resources>
    <string name="app_name">Karakoram</string>
    <string name="title_home">Home</string>
    <string name="title_mess">Mess</string>
    <string name="title_bill">Bills</string>
    <string name="title_events">Events</string>
    <string name="title_my_stuff">My Stuff</string>
    <string name="bill">BILL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="subtitle_app">Heads held high we clinch victory</string>
    <string name="subtitle_app2">Staying united we make history</string>


    <string name="form_hint">Choose an option</string>
    <string name="form_hint_dropdown">Select One</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- about us -->
    <string name="kara_description">Karakoram residence was established in the year 1965 and for over 50 years it has withstood all the challenges that came in it pursuit of success. Generations and Generations, the ceilings of this humble abode saw a change in faces but never a change in their hearts that always strode to put Karakoram on the top. This app is a dream of a group of such residents who wish to digitise the obsolete methods of the past and hence bring further comfort and ease to others in their endeavors. Thank you for using this app. Sarvashretham Sarvasundaram, Karakoram, Karakoram</string>
    <string name="contact_us">"Apaar Mudgal\n9599730162\napaarmudgal4@gmail.com\n\nSaurav Mittal\n8284910316\nsauravmittal001@gmail.com\n\nVeeramakali Vignesh\n9047511447\nveeramakali1@gmail.com"</string>
    <string name="privacy_policy_1">We collect the college registered name, entry number and hostel room number of the resident only.</string>
    <string name="privacy_policy_2">The complaints submitted will be visible only to the admins. The anonymity of the mess feedback will be followed according to the selected anonymity level by the resident.</string>
    <string name="privacy_policy_3">While the anonymity of the data will be maintained strictly, no data is hidden from the developers. Any misconduct can be tracked to the source</string>
</resources>
