<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.atry.homeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bill"
        android:name="com.example.atry.messFragment"
        android:label="@string/title_bill"
        tools:layout="@layout/fragment_bill" />

    <fragment
        android:id="@+id/navigation_mess"
        android:name="com.example.atry.messFragment"
        android:label="@string/title_mess"
        tools:layout="@layout/fragment_mess" />



</navigation>